--- a/stack.yaml
+++ b/stack.yaml
@@ -17,11 +17,13 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.16
+resolver: lts-16.31
 
 
 
-  
+extra-deps:
+  - req-3.2.0
+  - retry-0.8.1.2
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
